More busts, again
Added one more image, linked to them all in the content docs

--- a/animate-epub/bounceIn.html
+++ b/animate-epub/bounceIn.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite bounceIn">
-			<img alt="vanreygersberg" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/vanreygersberg.gif" />
+			<img alt="gettybust" src="images/gettybust_10.gif" />
 			<h1>bounceIn</h1>
 		</div>
 	</div>	
