--- a/animate-epub/bounceOutLeft.html
+++ b/animate-epub/bounceOutLeft.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite bounceOutLeft">
-			<img alt="nepos" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/nepos.gif" />
+			<img alt="gettybust" src="images/gettybust_11.gif" />
 			<h1>bounceOutLeft</h1>
 		</div>
 	</div>	
