--- a/animate-epub/flash.html
+++ b/animate-epub/flash.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite flash">
-			<img alt="capranica" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/capranica.gif" />
+			<img alt="gettybust" src="images/gettybust_02.gif" />
 			<h1>flash</h1>
 		</div>
 	</div>	
