--- a/animate-epub/flipInY.html
+++ b/animate-epub/flipInY.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite flipInY">
-			<img alt="vexed" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/vexed.gif" />
+			<img alt="gettybust" src="images/gettybust_14.gif" />
 			<h1>flipInY</h1>
 		</div>
 	</div>	
