--- a/animate-epub/jello.html
+++ b/animate-epub/jello.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite jello">
-			<img alt="fontainedebire" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/fontainedebire.gif" />
+			<img alt="gettybust" src="images/gettybust_09.gif" />
 			<h1>jello</h1>
 		</div>
 	</div>	
