--- a/animate-epub/pulse.html
+++ b/animate-epub/pulse.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite pulse">
-			<img alt="recamier" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/recamier.gif" />
+			<img alt="gettybust" src="images/gettybust_03.gif" />
 			<h1>pulse</h1>
 		</div>
 	</div>	
