--- a/animate-epub/rubberBand.html
+++ b/animate-epub/rubberBand.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite rubberBand">
-			<img alt="youngman" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/youngman.gif" />
+			<img alt="gettybust" src="images/gettybust_04.gif" />
 			<h1>rubberBand</h1>
 		</div>
 	</div>	
