--- a/animate-epub/shake.html
+++ b/animate-epub/shake.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite shake">
-			<img alt="demosthenes" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/demosthenes.gif" />
+			<img alt="gettybust" src="images/gettybust_05.gif" />
 			<h1>shake</h1>
 		</div>
 	</div>	
