--- a/animate-epub/swing.html
+++ b/animate-epub/swing.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite swing">
-			<img alt="woman" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/woman.gif" />
+			<img alt="gettybust" src="images/gettybust_06.gif" />
 			<h1>swing</h1>
 		</div>
 	</div>	
