--- a/animate-epub/tada.html
+++ b/animate-epub/tada.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite tada">
-			<img alt="emperor" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/emperor.gif" />
+			<img alt="gettybust" src="images/gettybust_07.gif" />
 			<h1>tada</h1>
 		</div>
 	</div>	
