--- a/animate-epub/wobble.html
+++ b/animate-epub/wobble.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite wobble">
-			<img alt="africanwoman" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/africanwoman.gif" />
+			<img alt="gettybust" src="images/gettybust_08.gif" />
 			<h1>wobble</h1>
 		</div>
 	</div>	
