--- a/animate-epub/bounceInUp.html
+++ b/animate-epub/bounceInUp.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite bounceInUp">
-			<img alt="vanreygersberg" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/vanreygersberg.gif" />
+			<img alt="gettybust" src="images/gettybust_10.gif" />
 			<h1>bounceInUp</h1>
 		</div>
 	</div>	
