--- a/animate-epub/fadeInLeft.html
+++ b/animate-epub/fadeInLeft.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite fadeInLeft">
-			<img alt="woman2" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/woman2.gif" />
+			<img alt="gettybust" src="images/gettybust_12.gif" />
 			<h1>fadeInLeft</h1>
 		</div>
 	</div>	
