--- a/animate-epub/fadeOutDown.html
+++ b/animate-epub/fadeOutDown.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite fadeOutDown">
-			<img alt="vexed" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/vexed.gif" />
+			<img alt="gettybust" src="images/gettybust_13.gif" />
 			<h1>fadeOutDown</h1>
 		</div>
 	</div>	
