--- a/animate-epub/zoomOutDown.html
+++ b/animate-epub/zoomOutDown.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite zoomOutDown">
-			<img alt="vexed" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/vexed.gif" />
+			<img alt="gettybust" src="images/gettybust_22.gif" />
 			<h1>zoomOutDown</h1>
 		</div>
 	</div>	
