--- a/unused/slideInUp.html
+++ b/unused/slideInUp.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="head">
 		<div class="animated infinite slideInUp">
-			<img alt="vexed" src="file:///Users/gregalbers/GitHub/EBOOKS/animate-epub/images/vexed.gif" />
+			<img alt="gettybust" src="images/gettybust_01.gif" />
 			<h1>slideInUp</h1>
 		</div>
 	</div>	
