Updated title page
Updated title page to credit and link to Getty open content for images

--- a/animate-epub/titlepage.html
+++ b/animate-epub/titlepage.html
@@ -9,10 +9,10 @@
 <body>
 	<div class="head">
 		<h1>Animate.epub</h1>
-		<p>Testing CSS animations in EPUB <br />with <a href="https://github.com/daneden/animate.css">Animate.css</a> by Daniel Eden</p>
+		<p>Testing CSS animations in EPUB with <a href="https://github.com/daneden/animate.css">Animate.css</a> by Daniel&#160;Eden, and images from the Getty&#8217;s <a href="http://www.getty.edu/about/opencontent.html">Open Content Program</a>.</p>
 		<hr />
-		<h4>Getty Publications</h4>
-		<p><a href="https://github.com/gettypubs">github.com/gettypubs</a></p>
+		<h4>Greg Albers</h4>
+		<p><a href="https://github.com/geealbers">github.com/geealbers</a></p>
 	</div>
 </body>
 </html>
