Added flip animation
Added flip animation which was in the animate.css file but not
documented. Includes also new bust image and associated captions.

--- a/animate-epub/code.html
+++ b/animate-epub/code.html
@@ -1687,7 +1687,11 @@ The J. Paul Getty Museum, Los Angeles</p>
   animation-name: flip;
 }
 </pre>
-<p>TBD</p>
+<p><a href="http://www.getty.edu/art/collection/objects/130335">http://www.getty.edu/art/collection/objects/130335</a><br />
+Sèvres Manufactory (French, active 1756 - present) Josse-François-Joseph LeRiche (French, 1741 - 1812)<br />
+<em>Portrait bust of Monseigneur le duc d'Orléans</em>, about 1785, Hard-paste biscuit porcelain<br />
+27.6 x 22.9 cm (10 7/8 x 9 in.)<br />
+The J. Paul Getty Museum, Los Angeles</p>
 <hr />
 <h2><a href="flipInX.html" id="flip-in-x">flipInX</a></h2>
 <pre>
