added links to code snippets

--- a/animate-epub/bounce.html
+++ b/animate-epub/bounce.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite bounce">
+			<a href="code.html#bounce">
 			<img alt="gettybust" src="images/gettybust_01.gif" />
 			<h1>bounce</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
