--- a/animate-epub/bounceOutDown.html
+++ b/animate-epub/bounceOutDown.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite bounceOutDown">
+			<a href="code.html#bounce-out-down">
 			<img alt="gettybust" src="images/gettybust_11.gif" />
 			<h1>bounceOutDown</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
