--- a/animate-epub/bounceOutRight.html
+++ b/animate-epub/bounceOutRight.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite bounceOutRight">
+			<a href="code.html#bounce-out-right">
 			<img alt="gettybust" src="images/gettybust_11.gif" />
 			<h1>bounceOutRight</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
