--- a/animate-epub/fadeOutDown.html
+++ b/animate-epub/fadeOutDown.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite fadeOutDown">
+			<a href="code.html#fade-out-down">
 			<img alt="gettybust" src="images/gettybust_13.gif" />
 			<h1>fadeOutDown</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
