--- a/animate-epub/fadeOutLeft.html
+++ b/animate-epub/fadeOutLeft.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite fadeOutLeft">
+			<a href="code.html#fade-out-left">
 			<img alt="gettybust" src="images/gettybust_13.gif" />
 			<h1>fadeOutLeft</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
