--- a/animate-epub/flip.html
+++ b/animate-epub/flip.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite flip">
+			<a href="code.html#flip">
 			<img alt="gettybust" src="images/gettybust_23.gif" />
 			<h1>flip</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
