--- a/animate-epub/flipInX.html
+++ b/animate-epub/flipInX.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite flipInX">
+			<a href="code.html#flip-in-x">
 			<img alt="gettybust" src="images/gettybust_14.gif" />
 			<h1>flipInX</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
