--- a/animate-epub/hinge.html
+++ b/animate-epub/hinge.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite hinge">
+			<a href="code.html#hinge">
 			<img alt="gettybust" src="images/gettybust_19.gif" />
 			<h1>hinge</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
