--- a/animate-epub/jello.html
+++ b/animate-epub/jello.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite jello">
+			<a href="code.html#jello">
 			<img alt="gettybust" src="images/gettybust_09.gif" />
 			<h1>jello</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
