--- a/animate-epub/lightSpeedOut.html
+++ b/animate-epub/lightSpeedOut.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite lightSpeedOut">
+			<a href="code.html#light-speed-out">
 			<img alt="gettybust" src="images/gettybust_16.gif" />
 			<h1>lightSpeedOut</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
