--- a/animate-epub/rollOut.html
+++ b/animate-epub/rollOut.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite rollOut">
+			<a href="code.html#roll-out">
 			<img alt="gettybust" src="images/gettybust_20.gif" />
 			<h1>rollOut</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
