--- a/animate-epub/rotateInDownLeft.html
+++ b/animate-epub/rotateInDownLeft.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite rotateInDownLeft">
+			<a href="code.html#rotate-in-down-left">
 			<img alt="gettybust" src="images/gettybust_17.gif" />
 			<h1>rotateInDownLeft</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
