--- a/animate-epub/rotateOutDownRight.html
+++ b/animate-epub/rotateOutDownRight.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite rotateOutDownRight">
+			<a href="code.html#rotate-out-down-right">
 			<img alt="gettybust" src="images/gettybust_18.gif" />
 			<h1>rotateOutDownRight</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
