--- a/animate-epub/rotateOutUpLeft.html
+++ b/animate-epub/rotateOutUpLeft.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite rotateOutUpLeft">
+			<a href="code.html#rotate-out-up-left">
 			<img alt="gettybust" src="images/gettybust_18.gif" />
 			<h1>rotateOutUpLeft</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
