--- a/animate-epub/rubberBand.html
+++ b/animate-epub/rubberBand.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite rubberBand">
+			<a href="code.html#rubber-band">
 			<img alt="gettybust" src="images/gettybust_04.gif" />
 			<h1>rubberBand</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
