--- a/animate-epub/swing.html
+++ b/animate-epub/swing.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite swing">
+			<a href="code.html#swing">
 			<img alt="gettybust" src="images/gettybust_06.gif" />
 			<h1>swing</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
