--- a/animate-epub/tada.html
+++ b/animate-epub/tada.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite tada">
+			<a href="code.html#tada">
 			<img alt="gettybust" src="images/gettybust_07.gif" />
 			<h1>tada</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
