--- a/animate-epub/zoomIn.html
+++ b/animate-epub/zoomIn.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite zoomIn">
+			<a href="code.html#zoom-in">
 			<img alt="gettybust" src="images/gettybust_21.gif" />
 			<h1>zoomIn</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
