--- a/animate-epub/zoomInLeft.html
+++ b/animate-epub/zoomInLeft.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite zoomInLeft">
+			<a href="code.html#zoom-in-left">
 			<img alt="gettybust" src="images/gettybust_21.gif" />
 			<h1>zoomInLeft</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
