--- a/animate-epub/bounceIn.html
+++ b/animate-epub/bounceIn.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite bounceIn">
+			<a href="code.html#bounce-in">
 			<img alt="gettybust" src="images/gettybust_10.gif" />
 			<h1>bounceIn</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
