--- a/animate-epub/bounceInRight.html
+++ b/animate-epub/bounceInRight.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite bounceInRight">
+			<a href="code.html#bounce-in-right">
 			<img alt="gettybust" src="images/gettybust_10.gif" />
 			<h1>bounceInRight</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
