--- a/animate-epub/bounceOutUp.html
+++ b/animate-epub/bounceOutUp.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite bounceOutUp">
+			<a href="code.html#bounce-out-up">
 			<img alt="gettybust" src="images/gettybust_11.gif" />
 			<h1>bounceOutUp</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
