--- a/animate-epub/code.html
+++ b/animate-epub/code.html
@@ -204,7 +204,7 @@ Unknown<br />
 <em>Herm of Menander</em>, 100 - 150, Marble<br />
 51.5 x 32 x 22.6 cm (20 1/4 x 12 5/8 x 8 7/8 in.)<br />
 The J. Paul Getty Museum, Villa Collection, Malibu, California</p><hr />
-<h2><a href="rubberBand.html" id="rubberBand">rubberBand</a></h2>
+<h2><a href="rubberBand.html" id="rubber-band">rubberBand</a></h2>
 <pre>
 @-webkit-keyframes rubberBand {
   0% {
