--- a/animate-epub/fadeInLeft.html
+++ b/animate-epub/fadeInLeft.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite fadeInLeft">
+			<a href="code.html#fade-in-left">
 			<img alt="gettybust" src="images/gettybust_12.gif" />
 			<h1>fadeInLeft</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
