--- a/animate-epub/fadeOut.html
+++ b/animate-epub/fadeOut.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite fadeOut">
+			<a href="code.html#fade-out">
 			<img alt="gettybust" src="images/gettybust_13.gif" />
 			<h1>fadeOut</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
