--- a/animate-epub/fadeOutUp.html
+++ b/animate-epub/fadeOutUp.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite fadeOutUp">
+			<a href="code.html#fade-out-up">
 			<img alt="gettybust" src="images/gettybust_13.gif" />
 			<h1>fadeOutUp</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
