--- a/animate-epub/flash.html
+++ b/animate-epub/flash.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite flash">
+			<a href="code.html#flash">
 			<img alt="gettybust" src="images/gettybust_02.gif" />
 			<h1>flash</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
