--- a/animate-epub/flipOutX.html
+++ b/animate-epub/flipOutX.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite flipOutX">
+			<a href="code.html#flip-out-x">
 			<img alt="gettybust" src="images/gettybust_15.gif" />
 			<h1>flipOutX</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
