--- a/animate-epub/flipOutY.html
+++ b/animate-epub/flipOutY.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite flipOutY">
+			<a href="code.html#flip-out-y">
 			<img alt="gettybust" src="images/gettybust_15.gif" />
 			<h1>flipOutY</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
