--- a/animate-epub/pulse.html
+++ b/animate-epub/pulse.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite pulse">
+			<a href="code.html#pulse">
 			<img alt="gettybust" src="images/gettybust_03.gif" />
 			<h1>pulse</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
