--- a/animate-epub/rotateInDownRight.html
+++ b/animate-epub/rotateInDownRight.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite rotateInDownRight">
+			<a href="code.html#rotate-in-down-right">
 			<img alt="gettybust" src="images/gettybust_17.gif" />
 			<h1>rotateInDownRight</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
