--- a/animate-epub/rotateInUpLeft.html
+++ b/animate-epub/rotateInUpLeft.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite rotateInUpLeft">
+			<a href="code.html#rotate-in-up-left">
 			<img alt="gettybust" src="images/gettybust_17.gif" />
 			<h1>rotateInUpLeft</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
