--- a/animate-epub/rotateOutUpRight.html
+++ b/animate-epub/rotateOutUpRight.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite rotateOutUpRight">
+			<a href="code.html#rotate-out-up-right">
 			<img alt="gettybust" src="images/gettybust_18.gif" />
 			<h1>rotateOutUpRight</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
