--- a/animate-epub/shake.html
+++ b/animate-epub/shake.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite shake">
+			<a href="code.html#shake">
 			<img alt="gettybust" src="images/gettybust_05.gif" />
 			<h1>shake</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
