--- a/animate-epub/wobble.html
+++ b/animate-epub/wobble.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite wobble">
+			<a href="code.html#wobble">
 			<img alt="gettybust" src="images/gettybust_08.gif" />
 			<h1>wobble</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
