--- a/animate-epub/zoomOutLeft.html
+++ b/animate-epub/zoomOutLeft.html
@@ -9,8 +9,10 @@
 <body>
 	<div class="head">
 		<div class="animated infinite zoomOutLeft">
+			<a href="code.html#zoom-out-left">
 			<img alt="gettybust" src="images/gettybust_22.gif" />
 			<h1>zoomOutLeft</h1>
+			</a>
 		</div>
 	</div>	
 </body>	
